# nueronce

./: .gitattributes  .gitignore  CITATION.cff  FOUNDATIONAL_GENERATION_RECOVERY.md  PLAN.md  README.md  README_DOWNLOADER.md  cfna_colab_training_FIXED_v3.ipynb  cfna_night_session (2).ipynb  commit_section_a.py  manifest.jsonl  nueronce_colab_training_FIXED_v3.ipynb  optiks.txt  pg5001-images.epub  pyproject.toml  requirements.txt  research_mcp.py  rhetoric.txt  stage_section_a.py  test.jsonl  val.jsonl  verify_section_a.ps1  writing.txt
artifacts/: audit_template_binding.py  compare_dense_incremental.py  dataset_builder_search.txt  find_pre_sft_checkpoints.py  foundational_recovery_v2_dataset_audit.md  foundational_recovery_v2_quarantine.csv  foundational_recovery_v2_quarantine_summary.md  foundational_v3_1_manifest.json  foundational_v3_build_report.md  foundational_v3_manifest.json  foundational_v3_planning_audit.md  foundational_v3_relabel_preview.csv  foundational_v3_relabel_preview.md  foundational_v3_relabel_preview_corrected.csv  foundational_v3_relabel_preview_corrected.md  foundational_v3_row_disposition.csv  foundational_v3_split_feasibility.md  inspect_checkpoint_learning.py  inspect_checkpoint_lineage.py
benchmarks/: CHECKSUMS.txt  authority_v3.json  cognitive_v1.json  cognitive_v2.json  h2_channel_probe.json  integrated_wave2.json  provenance_v31.json  provenance_v32.json  provenance_v33_dev.json  provenance_v33_results.json
cfna/: __init__.py  _backend.py  authority_clf.py  authority_data.py  authority_eval.py  authority_features.py  baselines.py  nn.py  (+38 more)
(+515 files in other folders)
